JSAI/error/src/test/resources/base/methods_a016.js
function foo () {
  return arguments.length;
};

var res = foo(2,3,5,7);
print(res);


